kubedeploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8-challenge-service
  namespace: default
spec:
  selector:
    app: minikube-k8-challenge
  type: NodePort
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: minikube-k8-challenge
    protocol: TCP
    port: 4000
    targetPort: 4000
    # If you set the `spec.type` field to `NodePort` and you want a specific port number,
    # you can specify a value in the `spec.ports[*].nodePort` field.
    # nodePort:
